# oldies

./: README.md
forth/fg/: FGDEMO01.FTH  FGDEMO02.FTH  FGDEMO03.FTH  FGDEMO04.FTH  FGDEMO05.FTH  FGDEMO06.FTH  FGDEMO07.FTH  FGDEMO08.FTH  FGDEMO09.FTH  FGDEMO10.FTH  FGDEMO11.FTH  FGDEMO12.FTH  FGDEMO13.FTH  FGDEMO14.FTH  FGDEMO15.FTH  FGDEMO16.FTH  FGDEMO17.FTH  FGDEMO18.FTH  FGDEMO19.FTH  FGDEMO20.FTH  FGDEMO21.FTH  FGDEMO22.FTH  FGDEMO23.FTH  FGDEMO24.FTH  FGDEMO25.FTH  FGDEMO26.FTH  FGDEMO27.FTH  FGDEMO28.FTH  FGDEMO29.FTH  FGDEMO30.FTH  FGDEMO31.FTH  FGDEMO32.FTH  FGDEMO33.FTH  FGDEMO34.FTH  FGDEMO35.FTH  FGDEMO36.FTH  FGDEMO37.FTH  FGDEMO38.FTH  FGDEMO39.FTH  FGDEMO40.FTH  (+30 more)
forth/pgforth/: BENCH.FTH  FORTH.DOC  MOTS.TXT  SPRITOR.1  STARTUP.FTH
forth/pgforth/ASM486/: 486ASM.DOC  486ASM.F
forth/pgforth/DOCS/: COMPILER.DOC  CONVERT.DOC  DMC.DOC  FILES.DOC  INTRO.TXT  pgforth.DOC
forth/pgforth/INCLUDE/: ALLOC.VOC  ARRAY.VOC  ASSEM.VOC  CONVERT.VOC  DEFER.VOC  DUMP.VOC  ESSAI.VOC  EVAL.OLD  EVAL.VOC  FILES.VOC  INIT.VOC  KERNEL.VOC  KERNEL2.VOC  META.VOC  NUMBER.VOC  PCCOLOR.VOC  RND.VOC  ROOT.VOC  SEE.VOC  STRING.VOC  WORDS.VOC
forth/pgforth/SOURCES/: COMPILER.ASM  CONVERT.ASM  DEF_FORT.ASM  FILES.ASM  IMPRIME.BAT  INTER.ASM  MAKE.BAT  NOYAU.ASM  NOYAU.GEN  VARIABLE.ASM  WORD.ASM  pgforth.ASM  pgforth.INC
forth/pgforth/ans94/: DPANS94.DOC  DPANS94.TXT
forth/tools/: Alarme.fth  Install.fth
forth/tools/astro/: calend.fth  solarium.fth
forth/tools/fenetres/: fen.doc  fen.fth  fen.voc  fendemo.fth  fmenu.doc  fmenu.fth  fselect.doc  fselect.fth  selfic.fth
forth/tools/food/: ecran.fth  food.fth  pointeur.fth
forth/tools/graphism/: detect.fth  graphics.doc  graphics.fth  grdemo.fth  kerngrph.fth
forth/tools/ia/: defnnet.doc  defnnet.fth  expert.doc  expert.fth  prcptron.doc  prcptron.fth
forth/tools/jeux/: bdool.doc  bdool.fth  conway.doc  conway.fth  gen-laby.doc  gen-laby.fth  gen-puzl.fth  jeux.doc  logotron.doc  logotron.fth  othello.doc  othello.fth  prefixes.dta  snake.doc  snake.fth  snake.top  suffixes.dta
gamedream/: specif.txt
gamedream/gbuild/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  confdefs.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs
gamedream/gbuild/glade/: aboutdialog.glade  coldlg.glade  mainwindow.glade  mvt.glade  optprj.glade
gamedream/gbuild/intl/: Makefile
gamedream/gbuild/misc/: asc2GL.txt
gamedream/gbuild/pixmaps/: config.xpm  exit.xpm  file.xpm  floppy.xpm  lineadd.xpm  linesel.xpm  linesub.xpm  new.xpm  pointadd.xpm  pointsel.xpm  pointsub.xpm  prm_cam.xpm  prm_cone.xpm  prm_cube.xpm  prm_cyln.xpm  prm_lght.xpm  prm_plne.xpm  prm_sphr.xpm  prm_toru.xpm  prm_ttxt.xpm  right_arrow.xpm  save.xpm  triadd.xpm  trisel.xpm  trisub.xpm  tritex.xpm  viewpoint.xpm
gamedream/gbuild/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  fr.po  gbuild.pot
gamedream/gbuild/src/: GB3Dtypes.h  GBcamera.cc  GBcamera.h  GBcommon.h  GBglarea.cc  GBglarea.h  GBglfont.cc  GBglfont.h  GBglmisc.cc  GBglmisc.h  GBhelp.cc  GBhelp.h  GBinterface.cc  GBinterface.h  GBmain.cc  GBmainmenu.cc  GBmainmenu.h  GBmath.cc  GBmath.h  GBmisc.cc  GBmisc.h  GBobjets.cc  GBobjets.h  GBstatusbar.cc  GBstatusbar.h  GBtoolbar.cc  GBtoolbar.h  GBtrackball.cc  GBtrackball.h  GBwinmvt.cc  GBwinmvt.h  GBwinparam.cc  GBwinparam.h  GBworld.cc  GBworld.h  Makefile  Makefile.am  Makefile.in
gamedream/gplay/: configure.in
gxe/: AUTHORS  ChangeLog  Makefile  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  configure  configure.in  mkinstalldirs
gxe/doc/: index.html  orga-01.dia  orga-projet.dia  specif-1.dia  specif-generale.dia  specif-mode-1.dia  specif-mode-2.dia
gxe/libs/: Makefile  libgxetest.c
gxe/src/: Makefile  Makefile.am  Makefile.in  common.h  gxe.c  gxe.conf  s_api.c  s_api.h  s_cmd.c  s_cmd.h  s_globals.h  s_incomming.c  s_incomming.h  s_misc.c  s_misc.h  s_modules.c  s_modules.h  s_out.c  s_out.h  s_process.c  s_process.h  s_runcmd.c  s_runcmd.h  s_session.c  s_session.h  s_signaux.c  s_signaux.h  s_sockets.c  s_sockets.h  s_syslog.c  s_syslog.h  s_xmlattr.c  s_xmlattr.h  s_xmlparse.c  s_xmlparse.h
gxe/tests/: cnx-xyz.xml  getinfo.xml  getmaxcv.xml  getoffset.xml  sendcmd  sendcmd.c  testacc.xml  testcmd.xml  testcmd2.xml  testcmd3.xml  testcmd4.xml  testcmd5.xml  testcmd6.xml  testcmd7.xml  testerr.xml  testerr10.xml  testerr2.xml  testerr3.xml  testerr4.xml  testerr5.xml  testerr6.xml  testerr7.xml  testerr8.xml  testerr9.xml  testparse.xml  testquery.xml  testrid.xml  testsigsegv.xml
libserial/: Makefile  README  libserial.c  libserial.h  test.c
libserial/contrib/: Makefile  serialwatch  serialwatch.c  serialwatch.sh
logotron/: logotron.php  logotron.sql
neoserv/: Appstat.cdx  Appstat.dbf  Appsys.cdx  Appsys.dbf  Chronos.cdx  Chronos.dbf  Modems.cdx  Modems.dbf  N.bat  N2.bat  Neoserv.cdx  Neoserv.dbf  Neoserv.ini  Neostat.cdx  Neostat.dbf  Neosys.cdx  Neosys.dbf  Neosys.fpt
neoserv/apps/: 1erprog.npg  accest2.vtx  bench.npg  bench2.npg  color.npg  coltest.npg  empty.npg  exec2.npg  execute.npg  gpf.npg  infosrv.npg  infosys.npg  input.npg  keyword.npg  kronos.npg  mod1.npg  mod2.npg  numtel.npg  recurse.npg  serpent.cdx  serpent.dbf  serpent.fpt  speed1.npg  speed2.npg  speed3.npg  strtest.npg  test.npg  test.pag  test01.npg  test02.npg  test03.npg  test04.npg  test05.npg  test06.npg  test07.npg  test08.npg  test09.npg  test10.npg  test11.npg  testlib.npg  (+44 more)
neoserv/doc/: Ficini.txt  Forth.txt  Langage.txt  Lisezmoi.1er  Manref.txt  Serveur.txt  histo.txt
neoserv/modules/: bdx0.vtx
neoserv/src/: Affichag.c  Clavier.c  Compiler.c  Compiler.h  Convbuff.c  Corinte.c  Crctab.c  Cvdata.c  Cvdata.h  Declkrnl.h  Divers.c  Exceptio.c  Filespec.c  Filespec.h  Generic.h  Gesfic.c  Gestion.c  Horloge.c  Initial.c  Kernel.c  Keyboard.h  Libcom.c  Localser.c  Makefile  Mem.c  Mem.h  Memoire.c  Minitel.h  Mitec.c  Modem.c  Neoserv.c  Pdata.c  Pdata.h  Ports.h  Regexp.c  Scrnsave.c  Stats.c  Stats.h  Swasync.c  Swvideo.c  (+3 more)
(+296 files in other folders)
